--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/roboto": "^5.2.9",
+    "lucide-vue-next": "^0.562.0",
     "vue": "^3.5.24"
   },
   "devDependencies": {
